--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "icon": "images/icon.png",
   "repository": "noop",
   "description": "Automaticaly add types to **nextjs** page functions i.e `getStaticSideProps`, `getServerSideProps` the returned types can not be automatically inferred and passed to the page. This extension also enables type safety in js code by leveraging JSDOCs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "prisma-labs",
   "engines": {
     "vscode": "^1.51.0"
@@ -45,6 +45,12 @@
           "type": "boolean",
           "default": false,
           "description": "Automatically add NextJS page types on save"
+        },
+        "prisma-labs.debug": {
+          "scope": "resource",
+          "type": "boolean",
+          "default": false,
+          "description": "Debug the Extension"
         }
       }
     }
@@ -61,9 +67,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "debug": "^4.2.0",
     "ts-morph": "8.1.2"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/dedent": "0.7.0",
     "@types/glob": "^7.1.3",
     "@types/jest": "26.0.15",
