fix: change namespace

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "displayName": "Prisma NextJS",
   "icon": "images/icon.png",
   "repository": "noop",
-  "description": "Automaticaly add types to **nextjs** page functions i.e `getStaticSideProps`, `getServerSideProps` the returned types can not be automatically inferred and passed to the page. This extension also enables type safety in js code by leveraging JSDOCs",
-  "version": "0.0.3",
-  "publisher": "prisma-labs",
+  "description": "Automagicly add types to **nextjs** page functions i.e `getStaticSideProps`, `getServerSideProps` the returned types can not be automatically inferred and passed to the page. This extension also enables type safety in js code by leveraging JSDOCs",
+  "version": "0.0.5",
+  "publisher": "WillLuke",
   "engines": {
     "vscode": "^1.51.0"
   },
@@ -15,13 +15,13 @@
   ],
   "activationEvents": [
     "workspaceContains:**/*.prisma",
-    "onCommand:prisma-labs.nextjs.addTypes"
+    "onCommand:WillLuke.nextjs.addTypes"
   ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "prisma-labs.nextjs.addTypes",
+        "command": "WillLuke.nextjs.addTypes",
         "title": "Add Types to a NextJS Page",
         "category": "Prisma NextJS"
       }
@@ -30,23 +30,23 @@
       "type": "object",
       "title": "Prisma NextJS",
       "properties": {
-        "prisma-labs.nextjs.root": {
+        "WillLuke.nextjs.root": {
           "scope": "resource",
           "type": "string",
           "description": "Option to set the path to a nextjs project"
         },
-        "prisma-labs.nextjs.hasPrompted": {
+        "WillLuke.nextjs.hasPrompted": {
           "scope": "resource",
           "type": "boolean",
           "description": "Hides Autotypes Prompt if it has been shown"
         },
-        "prisma-labs.nextjs.addTypesOnSave": {
+        "WillLuke.nextjs.addTypesOnSave": {
           "scope": "resource",
           "type": "boolean",
           "default": false,
           "description": "Automatically add NextJS page types on save"
         },
-        "prisma-labs.debug": {
+        "WillLuke.debug": {
           "scope": "resource",
           "type": "boolean",
           "default": false,
